=head1 Changes in 2.5.4

=over 2

=item *

As the name of the F<radius.conf> configuration file shipped with INN
for the B<nnrpd> authenticator against a RADIUS server conflicts with
the libradius package, this file is renamed to F<inn-radius.conf>
(B<innupgrade> takes care of the rename during the update).

=item *

When using funnel feeds, B<innfeed> log files were open forever, which
resulted in empty log files, once rotated by B<scanlogs>.  B<innfeed>
now reopens its log files upon receiving a HUP signal; this signal
is in particular sent by B<scanlogs> during log rotation.  Thanks to
Florian Schlichting for the patch.

=item *

Exploder and process channels are now reopened when C<ctlinnd flushlogs>
is used.  Otherwise, they could hold open an already deleted F<errlog>
file.  The issue affected in particular B<controlchan> or B<ninpaths>,
running as such channels.

=item *

Fixed the occurrence of an unexpected C<cant select> error generated by
B<innd>.  Thanks to Paul Tomblin for having caught that long-standing
issue.

=back

=head1 Changes in 2.5.3

Please note that the HTML_STATUS compile-time option has been replaced
with the I<htmlstatus> parameter in F<inn.conf>.  If you used HTML_STATUS,
you should set I<htmlstatus> accordingly.

A confusion in the name of a key in F<innfeed.conf> existed in the source
code.  Make sure that the misspelled, undocumented I<backlog-limit-high>
key is *not* used in your F<innfeed.conf> file; its real name is
I<backlog-limit-highwater>.  You should rename the key in case it is present
in your configuration file.  Otherwise, it will not be taken into account.
You can run B<inncheck> to verify that the syntax of this file is correct.

It is generally recommended to run B<inncheck> after any changes done to
configuration files, especially with the new improved version of this script
shipped with S<INN 2.5.3>, thanks to the hard work of Florian Schlichting
who added support for the syntax of F<incoming.conf>, F<innfeed.conf>,