@@ -1,20 +1,22 @@
-#
-# $Id$
-#
-# Sample perl filtering code for nnrpd hook.
-#
-
-#
-# This file is loaded when nnrpd starts up. If it defines a sub named
-# `filter_post', then that function will be called during processing of a
-# posting. It has access to the headers of the article via the associative
-# array `%hdr'. If it returns a null string then the article is accepted
-# for posting. A non-null string rejects it, and the value returned is used
-# in the rejection message (make sure that such a message is properly encoded
-# in UTF-8 so as to comply with the NNTP protocol).
-#
-# When filtering is disabled, the filter_end() Perl routine is called,
-# if defined, prior to the deactivation of the filter.
+##  $Id$
+##
+##  This is a sample filter for the Perl nnrpd hook.
+##
+##  See the INN Perl Filtering and Authentication Hooks documentation
+##  for more information.
+##
+##  This file is loaded when nnrpd starts up.  If it defines a sub named
+##  "filter_post", then that function will be called during processing of a
+##  posting.  It has access to the headers of the article via the associative
+##  array %hdr, and to useful information about the connection via the
+##  associative array %attributes.
+##  If it returns a null string, then the article is accepted for posting.
+##  A non-null string rejects it, and the value returned is used in the
+##  rejection message (make sure that such a message is properly encoded
+##  in UTF-8 so as to comply with the NNTP protocol).
+##
+##  When filtering is disabled, the filter_end() Perl routine is called,
+##  if defined, prior to the deactivation of the filter.
 
 #
 # Do any initialization steps.
@@ -36,7 +38,7 @@ sub filter_post {
 ### Uncomment this next block to reject articles that have 'make money'
 ### in their subject, or which have a "Re: " subject, but no References:
 ### header, or which have an invalid From.
-
+##
 ##    if ($hdr{"Subject"} =~ /make.*money/i) {
 ##        $rval = "Spam is not acceptable here..." ;
 ##    } elsif ($hdr{'Subject'} =~ /^Re: /o and $hdr{'References'} eq "") {
@@ -46,6 +48,12 @@ sub filter_post {
 ##        $rval = "From: is invalid, must be user\@[host.]domain.tld";
 ##    }
 
+### Uncomment this next block to reject articles that are sent from
+### a network outside 10.42.0.0/16.
+##
+##    if ($attributes{'ipaddress'} !~ /^10\.42\./) {
+##        $rval = "Unauthorized network.";
+##    }
 
 ### The next block rejects articles with too much quoted text, if the
 ### config hash directs it to.
